feat: pin login

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   http: ^0.13.1
   google_sign_in: ^6.1.4
   twilio_flutter: ^0.0.9
-  flutter_secure_storage: ^8.0.0
+  #flutter_secure_storage: ^8.0.0
 
 dev_dependencies:
   flutter_test:
