--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_sign_in: ^6.1.4
   twilio_flutter: ^0.0.9
   flutter_secure_storage: ^8.0.0
+  flutter_svg: ^2.0.7
 
 dev_dependencies:
   flutter_test:
