--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_secure_storage: ^8.0.0
   flutter_svg: ^2.0.7
   grouped_list: ^5.1.2
+  share: ^2.0.4
 
 dev_dependencies:
   flutter_test:
