--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,8 @@ dependencies:
   twilio_flutter: ^0.0.9
   flutter_secure_storage: ^8.0.0
   flutter_svg: ^2.0.7
-  grouped_list: ^5.1.2
   share: ^2.0.4
+  blur: ^3.1.0
 
 dev_dependencies:
   flutter_test:
